[metadata]
name = pypes-filters
version = 0.0.1
author = Brecht Verhoeve
description = Showcase for the pipes & filters pattern in Python
long_description = file: README.md
url = https://github.com/bverhoeve/pypes
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
[options]
package_dir = 
    = pypes
packages = find:
python_requires = >=3.9

[options.packages.find]
where = src